fix double border

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -513,6 +513,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: none;
 }
 
+.h-8 {
+  height: 2rem;
+}
+
 .h-screen {
   height: 100vh;
 }
@@ -535,10 +539,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .h-16 {
   height: 4rem;
-}
-
-.h-8 {
-  height: 2rem;
 }
 
 .min-h-0 {
@@ -979,5 +979,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .sm\:border-r {
     border-right-width: 1px;
+  }
+
+  .sm\:border-t-0 {
+    border-top-width: 0px;
   }
 }
